--- a/SearchAED/app/src/main/res/layout/app_bar_main.xml
+++ b/SearchAED/app/src/main/res/layout/app_bar_main.xml
@@ -16,7 +16,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="#F8F7DD"
+            android:background="#D10303"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
     </com.google.android.material.appbar.AppBarLayout>
 
