--- a/SearchAED/app/src/main/res/layout/youtube_fragment.xml
+++ b/SearchAED/app/src/main/res/layout/youtube_fragment.xml
@@ -6,42 +6,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:id="@+id/youtube_list">
+    </ListView>
 
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="53dp"
-            android:src="@drawable/cpr"/>
-
-        <TextView
-            android:id="@+id/cpr_link"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/jalnan"
-            android:text="  심폐소생술 진행방법"
-            android:textColor="#000000"
-            android:textSize="18dp" />
-
-    </LinearLayout>
-    <androidx.legacy.widget.Space
-        android:layout_width="match_parent"
-        android:layout_height="5dp"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="53dp"
-            android:src="@drawable/aed"/>
-        <TextView
-            android:id="@+id/aed_link"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/jalnan"
-            android:text="  AED 사용방법"
-            android:textColor="#000000"
-            android:textSize="18dp" />
-    </LinearLayout>
 </LinearLayout>
